--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "friendfinder",
   "version": "1.0.0",
   "description": "\"FriendFinder\" application -- basically a dating app",
-  "main": "friends.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "ejs": "^2.5.7",
+    "express": "^4.16.2",
     "path": "^0.12.7"
   }
 }
